<resources>
    <string name="app_name">希望智心</string>

    <!-- 请替换成在语音云官网申请的appid -->
    <string name="app_id">589bdab6</string>

    <!--public-->
    <string name="public_tip_login_first">请先登录</string>
    <string name="public_retry">重新下载</string>
    <string name="public_tip_please_input_content">请输入内容</string>
    <string name="public_start_speech">请说话</string>
    <string name="public_tip_please_input">请输入</string>
    <string name="public_send">发送</string>
    <string name="public_speech">说话</string>

    <!-- 听写 -->
    <string name="text_begin">请开始说话…</string>

    <string name="tts_toast_format" formatted="false">缓冲进度为%d%%，播放进度为%d%%</string>

    <!--语音-->
    <string name="title_boc">智能问答机器人</string>
    <string name="voice_assist_header_msg">你好，有什么需要，对我说就可以啦！</string>
    <string name="voice_assist_header_msg2">有什么可以帮您！</string>
    <string name="voice_assist_header_msg_format">您好，%s，有什么可以帮您！</string>
    <string name="voice_assist_speaking_title">你可以这样说</string>
    <string name="voice_assist_speaking_sample">分期付款如何办理\n如何查询消费情况\n信用卡还款方式\n忘记密码？</string>
    <string name="vocice_navi_sample">打开设置\n打开排班系统\n打开我的工作台\n</string>
    <string name="long_press_to_speech">长按说话</string>
    <string name="hot_question">热门问题</string>

    <string name="change_to_text">文本</string>

    <!--设置页面-->
    <string name="title_setting">设置</string>
    <string name="tts_speak_switch">语音播报</string>
    <string name="item_voice_navi_by_aiui">语音导航（By Aiui）</string>
    <string name="item_vocal_verify">声纹识别</string>
    <string name="item_vocal_register">声纹注册</string>
    <string name="item_app_switch">app切换</string>
    <string name="item_setting_logout">注销登录</string>
    <string name="item_setting_about">关于我们</string>

    <!--自动更新-->
    <string name="update_updating">更新中</string>
    <string name="update_downloading">下载中</string>

    <string name="default_speak_text">识别失败，请重试！</string>
    <string name="failure_text">未能理解你在说什么。</string>

    <string name="date_time_format">01月%d日</string>

    <string name="tip_open_setting">正在为您打开设置</string>
    <string name="open_format_style">正在为您打开%s</string>
    <string name="tip_unsupport_operator">暂不支持该操作</string>

    <!--排班系统-->
    <string name="title_schedule_system">排班系统</string>

    <!--我的工作台-->
    <string name="title_workbench">我的工作台</string>

    <!--语音导航-->
    <string name="title_voice_navi">语音导航</string>

    <string name="tip_no_result">抱歉，没有找到答案</string>
    <string name="tip_request_error">抱歉，我走神了</string>
    <string name="like">喜欢</string>
    <string name="unlike">不喜欢</string>
    <string name="voice_error_format">错误信息：%s</string>
    <string name="btn_like">赞</string>
    <string name="btn_unlike">踩</string>

    <!--home页-->
    <string name="tip_exit_program">再按一次退出</string>

    <string name="focus_kb">知识库</string>
    <string name="focus_voice_navi">语音导航</string>

    <!--声纹识别-->
    <string name="title_vocal_verify">声纹登录</string>
    <string name="tip_vocal_verify_success">识别通过</string>
    <string name="tip_vocal_verify_failed">识别失败</string>
    <string name="login_by_pwd">密码登录</string>
    <string name="register_now">立即注册</string>
    <string name="tip_vocal_login_first">第一次登录，必须先用密码登录</string>

    <!--声纹注册-->
    <string name="title_vocal_register">声纹注册</string>
    <string name="tip_left_times_format">训练 第%1$d遍(共%2$d遍)</string>
    <string name="tip_download_vocal_pwd_failed">下载声纹密码失败</string>
    <string name="tip_vocal_register_success">声纹注册成功</string>
    <string name="tip_vocal_registing">声纹注册中...</string>
    <string name="long_press_speech">长按说话</string>
    <string name="tip_vocal_pwd_downloading">声纹密码下载中...</string>

    <!--用户注册-->
    <string name="title_register">用户注册</string>
    <string name="hint_register_phone">请输入用户名</string>
    <string name="register">注册</string>
    <string name="hint_register_passport">请输入密码</string>
    <string name="tip_username_invalid">用户名不能为空</string>
    <string name="tip_pwd_invalid">密码不能为空</string>
    <string name="register_failed">注册失败</string>
    <string name="register_success">注册成功</string>

    <!--用户登录-->
    <string name="title_login">用户登录</string>
    <string name="public_login">登录</string>
    <string name="login_failed">登录失败</string>
    <string name="login_success">登录成功</string>

    <!--关于我们-->
    <string name="copyright">Copyright © 中国银行软件中心 All Rights Reverved</string>
    <string name="title_about_me">关于我们</string>


    <!--图片浏览-->
    <string name="pager_index_format_str">%1$d/%2$d</string>

    <!--浏览器页面-->
    <string name="url_invalid">地址解析不正确</string>

    <!--频道列表-->
    <string name="title_channel_list">频道列表</string>

    <string name="btn_open_url">查看更多</string>

    <string name="mic_init">初始化</string>
    <string name="mic_listening">&#160;&#160;&#160;倾听中...</string>
    <string name="mic_recognizing">&#160;&#160;&#160;识别中...</string>

    <string name="welcome_msg">很高兴为您服务，为方便后续相关知识获取，请您提供个人信息</string>
    <string name="welcome_msg2">欢迎使用希望智心</string>
    <string name="read_from_card">读卡识别</string>
    <string name="input_personal_info">录入个人信息</string>
    <string name="ignore">暂不录入</string>
    <string name="user_info_title">个人信息录入</string>
    <string name="consult_history">咨询历史</string>
    <string name="submit">提交</string>
    <string name="user_id">ID</string>
    <string name="user_id_hint">请填写ID号</string>
    <string name="user_name">姓名</string>
    <string name="user_sex">性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="user_name_hint">请填写姓名</string>
    <string name="user_credentials_type">证件类型</string>
    <string name="choice_default">请选择</string>
    <string name="user_credentials_no">证件号码</string>
    <string name="user_phone">联系方式</string>
    <string name="user_credentials_no_hint">请填写证件号码</string>
    <string name="user_user_phone_hint">请填写您的联系方式</string>
    <string name="current_city">当前城市</string>
    <string name="city_name_title">城市名称</string>
    <string name="sex_name_title">性别</string>
    <string name="address_detail">当前详细地址</string>
    <string name="address_detail_hint">请填写当前详细地址</string>
    <string name="memo_detail">备注</string>
    <string name="memo_hint">请填写...</string>
    <string name="search_info">查看救援知识</string>
    <string name="feedback">意见反馈</string>
    <string name="check_in_date">登记时间</string>
    <string name="fill_tips">请填写完整信息</string>
    <string name="success_tips">提交成功</string>
    <string name="error_tips">提交失败</string>
    <string name="user_city">所在地区</string>
    <string name="address">详细地址</string>
    <string name="tutor_date">辅导日期</string>
    <string name="tutor_time">辅导时间</string>
    <string name="tutor_locate_area">参与测评所在地区</string>
    <string name="tutor_satisfaction">当前辅导满意度</string>


    <string name="consult_history_title">咨询历史</string>
    <string name="consult_detail_title">咨询详情</string>
    <string name="tutor_detail_title">辅导详情</string>

    <string name="victim_detail_title">详细信息</string>

    <string name="knowledge_detail">知识详情</string>

    <string name="rescue_knowledge">查询救援知识</string>
    <string name="rescue_knowledge_type">救援知识类型</string>
    <string name="psychology_knowledge">查询心理知识</string>
    <string name="psychology_knowledge_type">心理知识类型</string>

    <string name="rescue_knowledge_category">救援知识大类</string>
    <string name="rescue_knowledge_subcategory">救援知识小类</string>
    <string name="psychology_knowledge_category">心理知识大类</string>
    <string name="psychology_knowledge_subcategory">心理知识小类</string>
    <string name="psychology_test">心理评测</string>

    <string name="ensure">确定</string>
    <string name="cancel">取消</string>

    <string name="loading">加载中...</string>
    <string name="loading_no_more">已加载全部</string>
    <string name="error_view_no_data">暂无内容</string>

    <string name="user_id_type">证件类型</string>
    <string name="user_card_id">身份证</string>
    <string name="user_id_no">证件号码</string>
    <string name="tutor_history">辅导历史</string>


    <string name="evaluation_result">评测结果</string>
    <string name="evaluation_level">您的评测结果等级</string>
    <string name="evaluation_advise">建议您的辅导方式</string>
    <string name="knonledge_query">相关知识查询</string>
    <string name="consult_key">一键咨询&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="vedio_consult">视频咨询</string>

    <string name="start_date">测评开始日期</string>
    <string name="end_date">测评截止日期</string>
    <string name="evaluation_status">测评状态</string>

    <string name="victim_id">心理测评号:</string>
    <string name="victim_level">心理测评等级:</string>
    <string name="join_consult">当前是否参与咨询:</string>
    <string name="doctor_name">当前咨询医师姓名:</string>
    <string name="doctor_level">当前咨询医师职业资格:</string>
    <string name="volunteer_platform">当前咨询志愿者所在平台:</string>
    <string name="join_date">参与测试日期:</string>
    <string name="join_time">参与测试时间:</string>
    <string name="consult_satisfaction">当前咨询满意度:</string>

    <string name="agree">是</string>
    <string name="disagree">否</string>

    <string name="evaluation_advise1">健康-无需咨询</string>
    <string name="evaluation_advise2">不良-心理知识获取</string>
    <string name="evaluation_advise3">障碍-寻求心理治疗</string>
    <string name="evaluation_advise4">疾病 -一对一辅导</string>

    <string name="evaluation_result1">健康状态</string>
    <string name="evaluation_result2">不良状态</string>
    <string name="evaluation_result3">心理障碍</string>
    <string name="evaluation_result4">心理疾病</string>

    <string name="finish">结束</string>
    <string name="chat_hint">请输入文字...</string>

    <string name="finish_confirm">确定要结束咨询？</string>

    <string name="tips_title">提示</string>
    <string name="comment_title">评价</string>
    <string name="comment_tips">请对本次咨询进行评价</string>

    <string name="wonderful">非常满意</string>
    <string name="good">基本满意</string>
    <string name="yawp">不满意</string>

    <string name="doctor_name_mark">医师</string>
    <string name="volunteer_name_mark">志愿者</string>

    <string name="victim_select_num">已选群众%d人，标记为：</string>
</resources>
