<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/title_activity_style"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <Button
        android:id="@+id/bt_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:layout_gravity="right"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/cancel"/>
    <TextView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_title_container"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/rescue_knowledge_category"/>

    <GridView android:id="@+id/category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/rescue_knowledge_subcategory" />

    <GridView android:id="@+id/sub_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/bt_ensure"
        android:layout_width="130dp"
        android:layout_height="30dp"
        android:background="@drawable/button_selector"
        android:text="@string/ensure"
        android:layout_gravity="center_horizontal"
        />

</LinearLayout>