<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/title_activity_style"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_50"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/common_margin_left"
            android:paddingRight="@dimen/common_margin_right"
            android:visibility="gone">

            <TextView
                style="@style/user_detail_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/user_id" />

            <EditText
                android:id="@+id/register_userid"
                style="@style/register_username_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:hint="@string/user_id_hint" />
        </LinearLayout>

        <include layout="@layout/line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_50"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/common_margin_left"
            android:paddingRight="@dimen/common_margin_right">

            <TextView
                style="@style/user_detail_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/user_name" />

            <EditText
                android:id="@+id/register_username"
                style="@style/register_username_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:hint="@string/user_name_hint" />
        </LinearLayout>

        <include layout="@layout/line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_50"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/common_margin_left"
            android:paddingRight="@dimen/common_margin_right">

            <TextView
                style="@style/user_detail_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/user_sex" />

            <LinearLayout
                android:id="@+id/ll_user_sex"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/user_sex"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical|right"
                    android:hint="@string/choice_default" />
            </LinearLayout>
        </LinearLayout>

        <include layout="@layout/line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_50"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/common_margin_left"
            android:paddingRight="@dimen/common_margin_right">

            <TextView
                style="@style/user_detail_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/user_credentials_type" />

            <LinearLayout
                android:id="@+id/ll_credentials_type"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/register_credentials_type"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical|right"
                    android:hint="@string/choice_default" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>

        <include layout="@layout/line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_50"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/common_margin_left"
            android:paddingRight="@dimen/common_margin_right">

            <TextView
                style="@style/user_detail_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/user_credentials_no" />

            <EditText
                android:id="@+id/register_credentials_no"
                style="@style/register_username_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:hint="@string/user_credentials_no_hint" />
        </LinearLayout>

        <include layout="@layout/line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_50"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/common_margin_left"
            android:paddingRight="@dimen/common_margin_right">

            <TextView
                style="@style/user_detail_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/user_phone" />

            <EditText
                android:id="@+id/register_user_phone"
                style="@style/register_username_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:hint="@string/user_user_phone_hint" />
        </LinearLayout>

        <include layout="@layout/line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_50"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/common_margin_left"
            android:paddingRight="@dimen/common_margin_right">

            <TextView
                style="@style/user_detail_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/current_city" />

            <LinearLayout
                android:id="@+id/ll_city_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/city_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical|right"
                    android:hint="@string/choice_default" />
            </LinearLayout>
        </LinearLayout>

        <include layout="@layout/line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="115dp"
            android:orientation="vertical"
            android:paddingLeft="@dimen/common_margin_left"
            android:paddingRight="@dimen/common_margin_right">

            <TextView
                style="@style/user_detail_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="19dp"
                android:text="@string/address_detail" />

            <EditText
                android:id="@+id/address_detail"
                style="@style/user_input_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="6.5dp"
                android:layout_weight="1"
                android:hint="@string/address_detail_hint" />
        </LinearLayout>

        <include layout="@layout/line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_50"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/common_margin_left"
            android:paddingRight="@dimen/common_margin_right">

            <TextView
                style="@style/user_detail_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/check_in_date" />

            <TextView
                android:id="@+id/tv_register_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="right"
                android:text="2019-07-25" />
        </LinearLayout>

        <include layout="@layout/line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="115dp"
            android:orientation="vertical"
            android:paddingLeft="@dimen/common_margin_left"
            android:paddingRight="@dimen/common_margin_right">

            <TextView
                style="@style/user_detail_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="19dp"
                android:text="@string/memo_detail" />

            <EditText
                android:id="@+id/et_memo"
                style="@style/user_input_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="6.5dp"
                android:layout_weight="1"
                android:hint="@string/memo_hint" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_50"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/common_margin_left"
        android:paddingRight="@dimen/common_margin_right"
        android:visibility="gone">

        <Button
            android:id="@+id/search_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/search_info" />

        <Button
            android:id="@+id/feedback"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:hint="@string/feedback" />
    </LinearLayout>

</LinearLayout>